--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h2>Dissertation</h2>
   <p>
     <a href="files/phd_thesis_qin.pdf" target="_blank">Download PhD Thesis (PDF)</a><br>
-    <strong>Title:</strong> Toward 5th Generation District Heating and Cooling Networks<br>
+    <strong>Title:</strong> (Ph.D. Thesis, title translated from French) Toward 5th Generation District Heating and Cooling Networks: Design, Operation of Energy Systems, and Development of Thermal Energy Markets Based on Mono- and Multi-Objective Optimization<br>
     <strong>Year:</strong> 2023<br>
     <strong>Institution:</strong> Université Laval
   </p>
